@startuml

abstract QueryReference{
    ReferenceType getRefType()
    EntityPointerUnorderedSet getContext()
    void setContext(EntityPointerUnorderedSet)
    String getReferenceValue()
    String toString()
}

abstract class QueryClause {
    ClauseType clause_type_
    ClauseType getClauseType()
}

abstract class SuchThatClause {
    RsType type_;
    QueryReference first_;
    QueryReference second_;
    RsType getSuchThatType()
    QueryReference getFirst()
    QueryReference getSecond()
}

class ParentClause {
}
class ParentTClause {
}
class FollowsClause {
}
class FollowsTClause {
}
class UsesClause {
}
class ModifiesClause {
}
class CallsClause {
}
class CallsTClause {
}
class NextClause {
}
class NextTClause {
}
class AffectsClause {
}
class AffectsTClause {
}

class WithClause {
    Comparator comparator_
    QueryReference first_
    QueryReference second_
    Comparator getComparator()
    QueryReference getFirst()
    QueryReference getSecond()
}

class Comparator {
    String toString()
}

class PatternClause  {
    SynonymReference synonym_declaration_
    QueryReference ent_ref_
    ExpressionSpec expression_
    SynonymReference getSynonymDeclaration()
    QueryReference getEntRef()
    ExpressionSpec getExpression()
}


abstract class PatternClause {
    QueryDeclaration getFirst()
    QueryDeclaration getSecond()
    QueryDeclaration getThird()
}

abstract ExpressionSpec {
    String expr_
    bool isWild()
    String toString()
}

class ExactExpression {
}

class WildExpression {
}

interface ICheckSemantics {
    bool isSemanticallyCorrect()
}

ExpressionSpec <|-down- ExactExpression
ExpressionSpec <|-down- WildExpression

ICheckSemantics <|.down. QueryClause

QueryClause <|-left- SuchThatClause
QueryClause <|-down- PatternClause
QueryClause <|-down- WithClause

SuchThatClause o-down- QueryReference
SuchThatClause <|-down- ParentClause
SuchThatClause <|-down- ParentTClause
SuchThatClause <|-down- FollowsClause
SuchThatClause <|-down- FollowsTClause
SuchThatClause <|-down- UsesClause
SuchThatClause <|-down- ModifiesClause
SuchThatClause <|-down- CallsClause
SuchThatClause <|-down- CallsTClause
SuchThatClause <|-down- NextClause
SuchThatClause <|-down- NextTClause
SuchThatClause <|-down- AffectsClause
SuchThatClause <|-down- AffectsTClause

PatternClause o-down- QueryReference
PatternClause *-down- ExpressionSpec

WithClause o-down- QueryReference
WithClause *-down- Comparator
@enduml